--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -77,6 +77,12 @@
                 </li>
                 {% endif %}
 
+                {% if person.role.id == 1 %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('close_year') }}"><i class="fa-solid fa-calendar"></i><span>Close Year</span></a>
+                </li>
+                {% endif %}
+
                 <li class="logout">
                     <a class='nav-link' href="{{url_for('logout')}}"><i class="fa-sharp fa-solid fa-right-from-bracket"></i><span>Logout</span></a>
                 </li>
