repay loan with savings is enabled

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -217,7 +217,7 @@
                             </div>
             
                             <div>
-                                <p><strong>Your loan application for {{ failed_loan.loan_amount | currency }} failed.</strong></p>
+                                <p><strong>Your loan application for {{ failed_loan.loan_amount | currency }} failed. {{ message }} </strong></p>
                             </div>
                             
                         </a>
