--- a/templates/forms.html
+++ b/templates/forms.html
@@ -100,7 +100,7 @@ active
         <div class="card">
 
             <div class="container">
-                <a href="{{ url_for('journal') }}">Journal</a>
+                <a href="{{ url_for('repay_loan') }}">Repay Loan With Savings</a>
             </div>
         </div>
 
