--- a/templates/query/loans.html
+++ b/templates/query/loans.html
@@ -61,26 +61,22 @@ Loan Information
 
 <button id="downloadExcelButton">Download Excel Report</button>
 
-<button id="downloadPdfButton">Download PDF Report</button>
+<h2>Download PDF Report</h2>
+    <button id="downloadPdfButton" onclick="window.print()">Download Report</button>
 
 <script>
 // Get the button element by its ID
 var buttonExcel = document.getElementById("downloadExcelButton");
-var buttonPdf = document.getElementById("downloadPdfButton");
 
 // Define the link URL
 var linkUrlExcel = "{{url_for('download_excel',type='loan',type_id='None' )}}";
-var linkUrlPdf = "{{url_for('download_pdf',type='loan',type_id='None' )}}";
 
 // Add a click event listener to the button
 buttonExcel.addEventListener("click", function() {
     // Redirect to the link URL
     window.location.href = linkUrlExcel;
 });
-buttonPdf.addEventListener("click", function() {
-    // Redirect to the link URL
-    window.location.href = linkUrlPdf;
-});
+
 </script>
 </body>
 {%endblock%}
