--- a/templates/query/loans.html
+++ b/templates/query/loans.html
@@ -46,10 +46,10 @@ Loan Information
         {% for loan in loans %}
         <tr>
             <td>{{ loan.id }}</td>
-            <td><a href="{{url_for('loan_account',person_id=loan.person.id)}}">{{ loan.person.name }}</a></td>  <!-- Fetching the person's name -->
+            <td><a href="{{url_for('get_loan_details',person_id=loan.person.id)}}">{{ loan.person.name }}</a></td>  <!-- Fetching the person's name -->
             <td>{{ loan.amount | currency }}</td>
             <td>{{ loan.interest_rate }}</td>
-            <td>{{ loan.person.loan_balance | currency }}</td>
+            <td><a href="{{url_for('loan_account',person_id=loan.person.id)}}">{{ loan.person.loan_balance | currency }}</a></td>
             <td>{{ loan.start_date }}</td>
             <td>{{ loan.end_date }}</td>
             <td>{{ loan.is_paid }}</td>
