yearly income now stored in database

--- a/templates/forms/make_payment.html
+++ b/templates/forms/make_payment.html
@@ -32,7 +32,7 @@ Bank Receipt Voucher
     <form method="POST">
         {{ form.hidden_tag}}
 
-        <h1>Make Payment</h1>
+        <h1>Bank Receipt Voucher</h1>
         
         <div class="form-label">
         {{ form.ref_no.label(class_='input-label') }} <br>
