--- a/templates/forms/repay_loan.html
+++ b/templates/forms/repay_loan.html
@@ -31,7 +31,7 @@ Repay Loan with Savings
             <form  method="post">
                 {{ form.hidden_tag() }}
 
-                <h1>Withdrawal Page</h1>
+                <h1>Repay Loan</h1>
 
                 <div class="form-label">
                 {{ form.person.label(class_='input-label') }} <br>
