--- a/templates/forms/withdraw.html
+++ b/templates/forms/withdraw.html
@@ -31,7 +31,7 @@ Make Withdrawal
             <form  method="post">
                 {{ form.hidden_tag() }}
 
-                <h1>Withdrawal Page</h1>
+                <h1>Withdrawal</h1>
 
                 <div class="form-label">
                 {{ form.person.label (class_='input-label') }} <br>
