logging person id to detect issye

--- a/templates/forms/loan_form.html
+++ b/templates/forms/loan_form.html
@@ -114,6 +114,7 @@ Create Loan
     
         function updateBalance() {
             const selectedPersonId = selectPerson.value;
+            console.log(selectedPersonId);
     
             // Make an AJAX request to the server to get the balance of the selected person
             const xhr = new XMLHttpRequest();
