--- a/templates/query/loan_details.html
+++ b/templates/query/loan_details.html
@@ -13,6 +13,7 @@ Loan Details
 {% endblock %}
 
 {% block content %}
+<body id="person">
 <div id="loan-details" class="print-content">
     <h2 class="section-title">Loan Details</h2>
     <div class="info-card">
@@ -76,4 +77,5 @@ Loan Details
         <button class="print-button" onclick="window.print()">Print</button>
     </div>
 </div>
+</body>
 {% endblock %}
