--- a/templates/query/income.html
+++ b/templates/query/income.html
@@ -43,6 +43,12 @@ COOLINK CO-OPERATIVE INCOME ACCOUNT
                     {% endif %}
                 </tr>
             {% endfor %}
+            <!-- total income-->
+            <tr>
+                <th colspan="2" class="total">Total Income </th>
+                <th class="total">{{ total_income | currency}}</th>
+            </tr>
+
             <tr>
                 <th colspan="4" class="total">Expences </th>
 
@@ -62,6 +68,11 @@ COOLINK CO-OPERATIVE INCOME ACCOUNT
                 <th colspan="2" class="total">Net Income </th>
                 <th class="total">{{ net_income | currency}}</th>
 
+            </tr>
+            <!-- total expenses-->
+            <tr>
+                <th colspan="2" class="total">Total Expenses </th>
+                <th class="total">{{ total_expenses | currency}}</th>
             </tr>
 
         </tbody>
