--- a/templates/forms.html
+++ b/templates/forms.html
@@ -104,5 +104,11 @@ active
             </div>
         </div>
 
+        <div class="card">
+
+            <div class="container">
+                <a href="{{ url_for('ledger_payment') }}">Journal Voucher</a>
+            </div>
+        </div>
 </section>
 {%endblock%}
