balance to ledgers

--- a/templates/admin/ledger.html
+++ b/templates/admin/ledger.html
@@ -36,6 +36,15 @@ Ledger
             <div class="form-box">
             {{ form.description(class_="input") }}
             <br></div>
+
+            <div class="form-label">
+                {{ form.balance_bfd.label(class_='input-label') }} <br>
+                </div>
+        
+                <div class="form-box">
+                {{ form.balance_bfd(class_="input") }}
+                <br></div>
+            <br>
         <br>
         
         <!-- {{ form.submit.label }}  -->
