--- a/templates/query/balance-sheet.html
+++ b/templates/query/balance-sheet.html
@@ -75,6 +75,7 @@ Sheet {% endblock %} {% block anchor%}
         <!-- Fetching the person's name -->
         <td>{{ asset.balance | currency }}</td>
       </tr>
+      {% endfor %}
       <tr>
         <th class="total">Total Current Assets</th>
 
