--- a/templates/query/balance-sheet.html
+++ b/templates/query/balance-sheet.html
@@ -56,13 +56,13 @@ Sheet {% endblock %} {% block anchor%}
         <!-- Fetching the person's name -->
 
         <td >{{ company_receivable| currency }}</td>
-      </tr>
+      <!--</tr>
       <tr>
         <td >
           <a href="{{url_for('companies_report')}}">Investments-Treasury bill</a>
         </td>
         <td>{{ treasury_bill | currency }}</td>
-        <!-- Fetching the person's name -->
+         Fetching the person's name -->
       </tr>
       {% for asset in assets %}
       <tr>
