--- a/templates/forms.html
+++ b/templates/forms.html
@@ -58,6 +58,13 @@ active
 
         <div class="card">
             <div class="container">
+                <a href="{{ url_for('journal') }}"> Bank Receipt Voucher</a>
+                <!-- make payment into the system -->
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="container">
                 <a href="{{ url_for('make_income') }}">Input Income</a>
             </div>
         </div>
