fixed loan payment errors

--- a/templates/forms.html
+++ b/templates/forms.html
@@ -58,7 +58,7 @@ active
 
         <div class="card">
             <div class="container">
-                <a href="{{ url_for('journal') }}"> Bank Receipt Voucher</a>
+                <a href="{{ url_for('journal') }}"> Bank Receipt Voucher Company</a>
                 <!-- make payment into the system -->
             </div>
         </div>
