--- a/templates/forms/payment.html
+++ b/templates/forms/payment.html
@@ -1,98 +1,197 @@
-{%extends 'base.html' %}
+{% extends 'base.html' %}
 
-{%block title%}
+{% block title %}
 Make Payment
 {% endblock %}
 
-{% block header%}
+{% block header %}
 Make Payment
-{% endblock  %}
+{% endblock %}
 
-{% block anchor%}
+{% block anchor %}
 <a href="{{ url_for('forms') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
-{% endblock  %}
+{% endblock %}
 
-{%block content%}
+{% block content %}
+<style>
+    .custom-dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    #customInput {
+        padding: 10px;
+        font-size: 16px;
+        width: 300px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        border: 1px solid #ccc;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        z-index: 1;
+        max-height: 150px;
+        overflow-y: auto;
+        background-color: #fff;
+        border-radius: 5px;
+    }
+
+    .dropdown-option {
+        padding: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .dropdown-option:hover {
+        background-color: #f0f0f0;
+    }
+</style>
+
 <body id="form">
     <div class="full-form-content">
-        <div class = "flash-messages">
-          {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-              <ul class="flash-messages">
-                  {% for message in messages %}
-                      <li class="fade-out {{message[0]}}">{{message[1]}}</li>
-                  {% endfor %}
-              </ul>
-          {% endif %}
-          {% endwith %}
-          </div>
-
-  <div class="form-wrapper" id="long-form">
-    <form method="POST">
-        {{ form.hidden_tag() }}
-
-        <h1>Make Payment</h1>
-
-        <div class='form-label'>
-        {{ form.person_id.label(class_='input-label') }} <br>
+        <div class="flash-messages">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <ul class="flash-messages">
+                {% for message in messages %}
+                <li class="fade-out {{message[0]}}">{{message[1]}}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+            {% endwith %}
         </div>
 
-        <div class="form-box">
-        {{ form.person_id(class_="input") }} <br>
-        </div>
+        <div class="form-wrapper" id="long-form">
+            <form method="POST">
+                {{ form.hidden_tag() }}
 
-        <div class="form-label">
-          {{ form.ref_no.label(class_='input-label') }} <br>
-          </div>
-  
-          <div class="form-box">
-          {{ form.ref_no(class_="input") }} <br></div>
-          
-          <div class="form-label">
-          {{ form.bank.label(class_='input-label') }} <br>
-          </div>
-  
-          <div class="form-box">
-          {{ form.bank(class_="input") }}
-          <br></div>
-  
-          <div class="form-label">
-          {{ form.amount.label(class_='input-label') }} <br>
-          </div>
-  
-          <div class="form-box">
-          {{ form.amount(class_="input") }}
-          <br></div>
-  
-          <div class="form-label">
-          {{ form.date.label (class_='input-label')}} <br>
-          </div>
-  
-          <div class="form-box">
-          {{ form.date(class_="input") }}
-          <br></div>
-  
-          <div class="form-label">
-          {{ form.payment_type.label (class_='input-label')}} <br>
-          </div>
-  
-          <div class="form-box">
-          {{ form.payment_type(class_="input") }}
-          <br></div>
-  
-          <div class="form-label">
-          {{ form.description.label(class_='input-label') }} <br>
-          </div>
-  
-          <div class="form-box">
-          {{ form.description(class_="input") }}
-          <br></div>
-  
-          <div class="button-wrapper">
-          <input type="submit" value="Submit" class="button"></div>
-    </form>
-  </div>
-</div>
+                <h1>Make Payment</h1>
+
+                <div class='form-label'>
+                    {{ form.person_id.label(class_='input-label', for='customInput') }} <br>
+
+                </div>
+
+                <div class="form-box">
+                    {{ form.person_id(class_="input", id="customInput", autocomplete="off") }} <br>
+                </div>
+                <div class="dropdown-content" id="dropdownContent">
+                    <!-- Options will be dynamically added here -->
+                </div>
+
+                <div class="form-label">
+                    {{ form.ref_no.label(class_='input-label') }} <br>
+                </div>
+
+                <div class="form-box">
+                    {{ form.ref_no(class_="input") }} <br>
+                </div>
+
+                <div class="form-label">
+                    {{ form.bank.label(class_='input-label') }} <br>
+                </div>
+
+                <div class="form-box">
+                    {{ form.bank(class_="input") }}
+                    <br>
+                </div>
+
+                <div class="form-label">
+                    {{ form.amount.label(class_='input-label') }} <br>
+                </div>
+
+                <div class="form-box">
+                    {{ form.amount(class_="input") }}
+                    <br>
+                </div>
+
+                <div class="form-label">
+                    {{ form.date.label (class_='input-label')}} <br>
+                </div>
+
+                <div class="form-box">
+                    {{ form.date(class_="input") }}
+                    <br>
+                </div>
+
+                <div class="form-label">
+                    {{ form.payment_type.label (class_='input-label')}} <br>
+                </div>
+
+                <div class="form-box">
+                    {{ form.payment_type(class_="input") }}
+                    <br>
+                </div>
+
+                <div class="form-label">
+                    {{ form.description.label(class_='input-label') }} <br>
+                </div>
+
+                <div class="form-box">
+                    {{ form.description(class_="input") }}
+                    <br>
+                </div>
+
+                <div class="button-wrapper">
+                    <input type="submit" value="Submit" class="button">
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
+<div class="custom-dropdown">
+    <input type="text" id="customInput" placeholder="Choose a person">
+    <div class="dropdown-content" id="dropdownContent">
+        <!-- Options will be dynamically added here -->
+    </div>
+</div>
 
-{%endblock%}
+<script>
+    // Get the list of people from the Django template
+    var people = [
+        {% for person in people %}
+        ['{{ person.name }}', '{{ person.employee_id }}'],
+        {% endfor %}
+    ];
+
+    var input = document.getElementById('customInput');
+    var dropdownContent = document.getElementById('dropdownContent');
+
+    input.addEventListener('input', function () {
+        // Clear previous options
+        dropdownContent.innerHTML = '';
+
+        // Filter people based on user input
+        var inputValue = input.value.toLowerCase();
+        var filteredPeople = people.filter(function (person) {
+            return person[0].toLowerCase().includes(inputValue);
+        });
+
+        // Add filtered options to the dropdown
+        filteredPeople.forEach(function (person) {
+            var option = document.createElement('div');
+            option.className = 'dropdown-option';
+            option.textContent = person.join(' - ');
+            option.addEventListener('click', function () {
+                input.value = person[0];
+                dropdownContent.style.display = 'none';
+            });
+            dropdownContent.appendChild(option);
+        });
+
+        // Display the dropdown if there are matching options
+        dropdownContent.style.display = filteredPeople.length > 0 ? 'block' : 'none';
+    });
+
+    // Hide the dropdown when clicking outside of it
+    document.addEventListener('click', function (event) {
+        if (!event.target.matches('.custom-dropdown')) {
+            dropdownContent.style.display = 'none';
+        }
+    });
+</script>
+
+{% endblock %}
