added auto complete to reset password

--- a/templates/forms/payment.html
+++ b/templates/forms/payment.html
@@ -37,12 +37,17 @@ Make Payment
         overflow-y: auto;
         background-color: #fff;
         border-radius: 5px;
+        cursor: pointer;
     }
 
     .dropdown-option {
         padding: 10px;
         cursor: pointer;
         transition: background-color 0.3s;
+        
+    }
+    .dropdown-content .dropdown-option:hover {
+        background-color: #ddd;
     }
 
     .dropdown-option:hover {
